--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,11 @@
 public/assets/*
 public/system/*
 
+# Ignore Mac OS X temp files
 *.DS_Store
+
+# Ignore generated doc files
+doc/controllers_brief.svg
+doc/controllers_complete.svg
+doc/models_brief.svg
+doc/models_complete.svg
